Better command line

--- a/README
+++ b/README
@@ -11,13 +11,9 @@ cd ..
 wget http://simple-build-tool.googlecode.com/files/sbt-launch-0.7.4.jar -O sbt-launch.jar
 ./sbt update
 
-# Test dummy without visualization on seeds 1 to 10
-./sbt "run example_solution/dummy 1 10 novis"
-
-# Visualize seeds 4 to 6
-./sbt "run example_solution/dummy 4 6 vis"
-
-# Optional: package visualizer into stand-alone jar file.
+# Compile and package visualizer into stand-alone jar file.
 ./sbt package-static
 mv target/scala_2.8.0.RC2/mondrian-clustering_2.8.0.RC2-static-0.1.jar ./vis.jar
-java -jar ./vis.jar example_solution/dummy 1 10 novis
+
+# Visualize seeds 1 to 10
+java -jar ./vis.jar -p example_solution/dummy -seed 1 -n 10 -vis -l my_id
